Done back-end and front end sign-up sign-in forget password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="otp_code_text">Code OTP</string>
     <string name="title_activity_forget_password">ForgetPassword</string>
     <string name="enter_email">Enter Email</string>reset_method
-    <string name="forget_password_detail">ForgetPassworDetail</string>
+    <string name="forget_password_detail">Provide your account\'s username to reset your password</string>
     <string name="reset_method">Choose Reset Method</string>
     <string name="mail_address">abcd@gmail.com</string>
     <string name="using_sms">Using SMS Method</string>
