--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,9 @@
     <string name="japanese_3">Japanese 3</string>
     <string name="do_exams">Do exams</string>
     <string name="verify_code">Verify code</string>
+    <string name="english">English</string>
+    <string name="japanese">日本</string>
+    <string name="vietnamese">Tiếng Việt</string>
 
 
 </resources>
